[tool.poetry]
name = "eagle"
version = "0.1.0"
description = ""
authors = ["juqi.peng <pengjuqi@163.com>"]
readme = "README.md"
packages = [{include = "eagle"}]

[tool.poetry.dependencies]
python = "^3.10.4"
colorlog = "^6.7.0"
loguru = "^0.6.0"
requests = "^2.26.0"
jsonpath-rw = "^1.4.0"
click = "^8.1.3"
pyyaml = "^6.0"
colorama = "^0.4.6"
prettytable = "^3.8.0"
jsonpath-ng = "^1.5.3"
ipython = "^8.15.0"
pytz = "^2023.3.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.poetry.scripts]
eagle = "eagle.bin.cli:runner_cli"
